major update, tabs and scroll completely working

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ $( document ).ready(function() {
     <!--Contact Info Card-->
 	<div class="container">
 		<div class="row">
-			<div id="contactinfo" class="text-vertical-center col-xs-12">
+			<div id="contactinfo" class="text-vertical-center col-sm-offset-3 col-sm-6">
 				<h1>DYLAN SCOTT COBEAN</h1>
 				<h4>Environmentalist / Urbanist / Cartographer / Data Analyst</h4>
 				<hr class="medium">
@@ -125,72 +125,61 @@ $( document ).ready(function() {
 					<a href="https://twitter.com/MrDylanScott" title="Twitter" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-twitter fa-3x social-tw grow"></i></a>
 					<a href="skype:dylanvideochat?userinfo" title="Skype" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-skype fa-3x social-sk grow"></i></a>
 				</div>
-
+			</div>
 				<div id="contactinfofooter" class="row">
-					<div class="text-vertical-center col-xs-12 center-block">
-					<div id="contactinfofootersentense" class="text-vertical-center center-block">
+					<div class="col-xs-12 text-vertical-center center-block">
+					<!--<div class="text-vertical-center center-block">
 							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>Click below to learn more...</i></h4>
-					</div>
-					<button class="text-vertical-center center-block" onclick='fly();' id='fly'>Pause Map</button>
+					</div>-->
+					
 					<div id="enter" class="text-vertical-center">
-                    	<a href="#mainnav" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
+                    	<a href="#affixeditem" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
                         <i class="fa fa-angle-double-down"></i>
                     	</a>
                     </div>
 						
 					</div>
 				</div>
-			</div>
+
 		</div>
 	</div><!--end container-->
-<div class="container-fluid" style="padding:0px">
-<div class="row-fluid">
-<div id="mainnav" class="col-xs-12 text-vertical-center">
 
-	<!-- Nav tabs -->
-	  <ul class="nav nav-tabs" role="tablist">
-	    <li role="presentation" class="active col-xs-3"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
-	    <li role="presentation" class="col-xs-3"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab"><h1>WORKSAMPLES</h1></a></li>
-	    <li role="presentation" class="col-xs-3"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab"><h1>TIMELINE</h1></a></li>
-	    <li role="presentation" class="col-xs-3"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>
-	  </ul>
+  <!-- Nav tabs -->
+<div class="container-fluid">
+<div class="row-fluid wrapper">
+  <ul id="affixeditem" class="col-xs-12 nav nav-tabs text-center" role="tablist" data-spy="affix" data-offset-top="1240">
+    <li role="presentation" class="active"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
+    <li role="presentation" ><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORKSAMPLES</h1></a></li>
+    <li role="presentation" ><a href="#timeline" aria-controls="timeline" role="tab" data-toggle="tab"><h1>TIMELINE</h1></a></li>
+    <li role="presentation" ><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>
+  </ul>
+</div>
 
-</div>
-</div>
-</div>
+
+
 	  <!-- Tab panes -->
 	  <div id="mainnavcontent" class="tab-content">
 		  	<!--About Me Section-->
 		    <div role="tabpanel" class="tab-pane fade in active" id="aboutme">
-		    	<div class="col-xs-offset-1 col-xs-10 sectioncontent">
+		    	<div class="container">
+		    		<div class="row">
+		    			<h1>so I'm dylan...</h1>
+		    			<br>
 						<h4>
-						I graduated with distiction from the University of Arizona in the Spring of 2013.
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
+						More than halfway through my degree program in Physics from the University of Arizona, I realized I was happier learning about the environment around me. I switched my major to Applied Mathematics & Environmental Hydrology, graduating With Distiction in the Spring of 2013 from the University of Arizona.
+						<br>
+						I've always been facinated by Stability Theory in Applied Mathematics Coursework - the concept of stable or instable equilibrium points where functions converge or diverge respectively. I apperciate the simplicity of that concept in our societies' built urban systems, slowly harmonizing or creating disonance with our ecosystem's natural processes.
+						</h4>
+						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+						THIS IS A TEST
+				</div>
+				</div>		
 
-						<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-
-						<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h4>
-					</div>
 		    </div>
 
 
 		    <!--Worksample Section-->
-		    <div role="tabpanel" class="tab-pane fade" id="profile">
+		    <div role="tabpanel" class="tab-pane fade" id="worksamples">
 		    	<div class="col-lg-4 col-xs-6">
 	                    <a href="https://dylansc22.github.io/worksample/" class="portfolio-box">
 	                        <img src="img/ffw2.png" class="img-responsive" alt="">
@@ -284,9 +273,9 @@ $( document ).ready(function() {
 		    </div>
 
 		    <!--Timeline Section-->
-		    <div role="tabpanel" class="tab-pane fade" id="messages">...</div>
+		    <div role="tabpanel" class="tab-pane fade" id="timeline">...</div>
 		    <!--Blog Section-->
-		    <div role="tabpanel" class="tab-pane fade" id="settings">...</div>
+		    <div role="tabpanel" class="tab-pane fade" id="blog">...</div>
 	  
 	  </div>
 
