--- a/index.html
+++ b/index.html
@@ -163,13 +163,20 @@ $( document ).ready(function() {
 		    <div role="tabpanel" class="tab-pane fade in active" id="aboutme">
 		    	<div class="container">
 		    		<div class="row">
-		    			<h1>so I'm dylan...</h1>
+
+
+		    			<div class="col-sm-2">
+		    				<div class="circle-image"><img scr="img/githubpic.jpg"></div>
+		    			</div>
+		    			<div class="col-xs-10"><h1>so I'm dylan...</h1>
 		    			<br>
 						<h4>
 						More than halfway through my degree program in Physics from the University of Arizona, I realized I was happier learning about the environment around me. I switched my major to Applied Mathematics & Environmental Hydrology, graduating With Distiction in the Spring of 2013 from the University of Arizona.
 						<br>
 						I've always been facinated by Stability Theory in Applied Mathematics Coursework - the concept of stable or instable equilibrium points where functions converge or diverge respectively. I apperciate the simplicity of that concept in our societies' built urban systems, slowly harmonizing or creating disonance with our ecosystem's natural processes.
-						</h4>
+						</h4></div>
+						
+		    			
 						<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 						THIS IS A TEST
 				</div>
