minor tweaks to text

--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@ $( document ).ready(function() {
 
 
 
-		    			<div id="aboutmefooter" class="col-xs-12"><i>I've always been facinated by Stability Theory in Applied Mathematics Coursework - the concept of stable or instable equilibrium points where functions converge or diverge respectively. I apperciate the simplicity of that concept in our societies' built urban systems, slowly harmonizing or creating disonance with our ecosystem's natural processes.</i></div>
+		    			<div class="aboutmefooter col-xs-12"><i>I've always been facinated by Stability Theory in Applied Mathematics Coursework - the concept of stable or instable equilibrium points where functions converge or diverge respectively. I apperciate the simplicity of that concept in our societies' built urban systems, slowly harmonizing or creating disonance with our ecosystem's natural processes.</i></div>
+
 		    			
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-						THIS IS A TEST
+
 				</div>
 				</div>		
 
@@ -197,7 +197,7 @@ $( document ).ready(function() {
 
 		    <!--Worksample Section-->
 		    <div role="tabpanel" class="tab-pane fade" id="worksamples">
-		    	<div class="col-lg-6 col-xs-6">
+		    	<div class="col-lg-4 col-xs-6">
 	                    <a href="https://dylansc22.github.io/worksample/" class="portfolio-box">
 	                        <img src="img/ffw2.png" class="img-responsive" alt="">
 	                        <div class="portfolio-box-caption">
@@ -212,7 +212,7 @@ $( document ).ready(function() {
 	                        </div>
 	                    </a>
 	                </div>
-	                <div class="col-lg-3 col-xs-6">
+	                <div class="col-lg-4 col-xs-6">
 	                    <a href="http://pubs.usgs.gov/sir/2011/5166/" class="portfolio-box">
 	                        <img src="img/USGSReport.png" class="img-responsive" alt="">
 	                        <div class="portfolio-box-caption">
@@ -227,7 +227,7 @@ $( document ).ready(function() {
 	                        </div>
 	                    </a>
 	                </div>
-	                <div class="col-lg-3 col-xs-6">
+	                <div class="col-lg-4 col-xs-6">
 	                    <a href="#" class="portfolio-box">
 	                        <img src="img/Tucson3.png" class="img-responsive" alt="">
 	                        <div class="portfolio-box-caption">
@@ -243,13 +243,13 @@ $( document ).ready(function() {
 	                    </a>
 	                </div>
 	                
-	                <h2>Additional content coming soon</h2>
+	                <div class="aboutmefooter"><h2>Additional content coming soon</h2></div>
 		    </div>
 
 		    <!--Timeline Section-->
-		    <div role="tabpanel" class="tab-pane fade" id="timeline">...</div>
+		    <div role="tabpanel" class="tab-pane fade" id="timeline"><div class="aboutmefooter"><h2>Timeline coming soon</h2></div></div>
 		    <!--Blog Section-->
-		    <div role="tabpanel" class="tab-pane fade" id="blog">...</div>
+		    <div role="tabpanel" class="tab-pane fade" id="blog"><div class="aboutmefooter"><h2>Blog link coming soon</h2></div></div>
 	  
 	  </div>
 
