removed fluid container, i like it, cleaner look

--- a/index.html
+++ b/index.html
@@ -145,15 +145,15 @@ $( document ).ready(function() {
 	</div><!--end container-->
 
   <!-- Nav tabs -->
-<div class="container-fluid">
-<div class="row-fluid wrapper">
+<div class="container">
+<div class="row wrapper no-gutter">
   <ul id="affixeditem" class="col-xs-12 nav nav-tabs text-center" role="tablist" data-spy="affix" data-offset-top="1240">
     <li role="presentation" class="active"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h3>ABOUT ME</h3></a></li>
     <li role="presentation" ><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h3>WORKSAMPLES</h3></a></li>
     <li role="presentation" ><a href="#timeline" aria-controls="timeline" role="tab" data-toggle="tab"><h3>TIMELINE</h3></a></li>
     <li role="presentation" ><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h3>BLOG</h3></a></li>
   </ul>
-</div>
+
 
 
 
@@ -252,8 +252,8 @@ $( document ).ready(function() {
 		    <div role="tabpanel" class="tab-pane fade" id="blog"><div class="aboutmefooter"><h2>Blog link coming soon</h2></div></div>
 	  
 	  </div>
-
-
+</div>
+</div>
 	  <!-- Resume Modal -->
 	<div class="modal fade" id="ResumeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	  <div class="modal-dialog modal-lg" role="document">
