minor improvements to gh-pages

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ $( document ).ready(function() {
     <!--Contact Info Card-->
 	<div class="container">
 		<div class="row">
-			<div id="contactinfo" class="text-vertical-center col-sm-offset-3 col-sm-6">
+			<div id="contactinfo" class="text-vertical-center col-sm-offset-3 col-sm-6 col-xs-12">
 				<h1>DYLAN SCOTT COBEAN</h1>
 				<h4>Environmentalist / Urbanist / Cartographer / Data Analyst</h4>
 				<hr class="medium">
