--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@ $( document ).ready(function() {
 <div class="container">
 <div class="row wrapper no-gutter">
   <ul id="affixeditem" class="col-xs-12 nav nav-tabs text-center" role="tablist" data-spy="affix" data-offset-top="1240">
-    <li role="presentation" class="active"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h3>ABOUT ME</h3></a></li>
-    <li role="presentation" ><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h3>WORKSAMPLES</h3></a></li>
-    <li role="presentation" ><a href="#timeline" aria-controls="timeline" role="tab" data-toggle="tab"><h3>TIMELINE</h3></a></li>
-    <li role="presentation" ><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h3>BLOG</h3></a></li>
+    <div class="active col-xs-3"><li role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h3>ABOUT ME</h3></a></li></div>
+     <div class="col-xs-3"><li role="presentation" class="col-xs-3"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab" class="col-xs-3"><h3>WORKSAMPLES</h3></a></li></div>
+     <div class="col-xs-3"><li role="presentation" class="col-xs-3" ><a href="#timeline" aria-controls="timeline" role="tab" data-toggle="tab"><h3>TIMELINE</h3></a></li></div>
+     <div class="col-xs-3"><li role="presentation" ><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h3>BLOG</h3></a></li></div>
   </ul>
 
 
