landing page complete, moving on to work on subpages

--- a/index.html
+++ b/index.html
@@ -94,12 +94,15 @@
 							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>Click below to learn more...</i></h4>
 					</div>-->
 					
-					<div id="enter" class="text-vertical-center wow bounceInUp" data-wow-delay="3s">
-                    	<a href="#affixeditem" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
+					<div id="enter" class="text-vertical-center wow fadeIn" data-wow-delay="5s">
+                    	<!--<a href="aboutme/index.html" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
                         <i class="fa fa-angle-double-down"></i>
-                    	</a>
+                    	</a>-->
+                    	<a href="aboutme/index.html" class="btn btn-warning btn-lg" role="button">Click to Enter</a>
                     </div>
-						
+                    <!--<div>
+                    <button class="text-vertical-center center-block" onclick='fly();' id='fly'>Pause Map</button>
+					</div>-->
 					</div>
 				</div>
 
