functioning separate pages website

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
 							<h4><i>Welcome to my self-built website. A showcase of my on-going post-college education. <br>Click below to learn more...</i></h4>
 					</div>-->
 					
-					<div id="enter" class="text-vertical-center wow fadeIn" data-wow-delay="5s">
+					<div id="enter" class="text-vertical-center wow fadeInUp" data-wow-delay="4s">
                     	<!--<a href="aboutme/index.html" class="btn btn-circle page-scroll text-vertical-center center-block grow" title="Click to Learn More" data-toggle="tooltip" data-placement="top">
                         <i class="fa fa-angle-double-down"></i>
                     	</a>-->
-                    	<a href="aboutme/index.html" class="btn btn-warning btn-lg" role="button">Click to Enter</a>
+                    	<a href="aboutme/index.html" class="btn btn-lg fly" role="button"><h5>Click to Enter</h5></a>
                     </div>
                     <!--<div>
                     <button class="text-vertical-center center-block" onclick='fly();' id='fly'>Pause Map</button>
@@ -146,7 +146,7 @@
 	    </div>
 	  </div>
 	</div>
-	<div id='mapid' class="wow fadeIn" data-wow-delay="4s"></div>
+	<div id='mapid' class="wow fadeIn" data-wow-delay="3s"></div>
 <script>
 $(document).ready(function() {
 	/*enables all map behavior*/
