--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -63,7 +63,9 @@
 
 <body id="bootstrapoverrides">
     <div id='mapidheader'>
-                <div id="navigation">
+        <div class="container-fluid">
+            <div class="row-fluid">
+                <div class="col-xs-12" id="navigation">
                     <!-- Nav tabs -->
                       <ul class="nav nav-tabs nav-justified nowrap" role="tablist">
                         <li class="active" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
@@ -71,6 +73,8 @@
                         <li role="presentation"><a href="#currentprojects" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>CURRENT PROJECTS</h1></a></li>
                         <li role="presentation"><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>
                       </ul>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Tab panes -->
@@ -110,8 +114,6 @@
         </div>
         <!--Worksample Section-->
         <div role="tabpanel" class="tab-pane fade" id="worksamples">
-                    <div class="container">
-                <div class="row">
             <div class="col-lg-4 col-xs-6">
                     <a href="https://dylansc22.github.io/worksample/" class="portfolio-box">
                         <img src="../img/ffw2.png" class="img-responsive" alt="">
@@ -184,8 +186,8 @@
         <div role="tabpanel" class="tab-pane fade" id="blog">
             <div class="container">
                 <div class="row">
-                    <h1>Blog Coming Soon</h1>
-                </div>
+                    <h1>Blog Posts Coming Soon</h1>
+            </div>
             </div>
         </div>
     </div>
