wow js ready on mainpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>I'm Dylan</title>
+    <title>Dylan's Portfolio</title>
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
 
