--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -15,12 +15,16 @@
     <!-- Custom CSS -->
     <link href="../css/style.css" rel="stylesheet">
     
+    <!--Animation CSS and WOW.JS-->
+    <!-- see http://mynameismatthieu.com/WOW/docs.html for additional details -->
+    <link rel="stylesheet" href="../css/animate.css">
+    <script src="../js/wow.min.js"></script>
 
 
-        <!--Awesome Fonts Library-->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-        <!-- Google Fonts (from https://www.google.com/fonts )-->
-        <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+    <!--Awesome Fonts Library-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <!-- Google Fonts (from https://www.google.com/fonts )-->
+    <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
  	<script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
@@ -62,6 +66,11 @@
 
 
 <body id="bootstrapoverrides">
+<script>
+    /*enables all animation behavior*/
+    new WOW().init();
+</script>
+
     <div id='mapidheader'>
         <div class="container-fluid">
             <div class="row-fluid">
