Minor tweaks - Spelling and Grammer

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <!-- Nav tabs -->
                       <ul class="nav nav-tabs nav-justified nowrap" role="tablist">
                         <li class="active" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
-                        <li role="presentation"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORKSAMPLES</h1></a></li>
+                        <li role="presentation"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORK SAMPLES</h1></a></li>
                         <li role="presentation"><a href="#currentprojects" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>CURRENT PROJECTS</h1></a></li>
                         <!--<li role="presentation"><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>-->
                       </ul>
@@ -138,13 +138,13 @@
                         <div><span class="biggerfont">
                         I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
                         <br><br>
-                        <div><span class="biggerfont">I'm a published technical writer </span>with the United States Geological Survery, and I have an upcoming authorship for my work in Forest Infrastructure with the World Resources Institute in Washington DC. 
+                        <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery, and I have an upcoming authorship for my work in Forest Infrastructure with the World Resources Institute in Washington DC. 
                         <br><br>
-                        <div><span class="biggerfont">I'm a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplimentary programs.
+                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplimentary programs.
                         <br><br>
                         <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure, & environmental risk modeling.
                         <br><br>  
-                        <div><span class="biggerfont">I'm passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainablly-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
+                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainablly-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
                         <br><br>
                         <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven GIS analysis. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development, to final release for end-users. 
                         <br><br>                       
