--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<!--<h3>A Personal Webpage</h3>-->
 				<div class="text-center center-block site-header">
 					<!--Resume-->
-					<a href="#" title="Resume" data-toggle="tooltip" data-placement="bottom"><id="enablehovercoverwithoutfocuscolor" class="fa fa-file-text-o fa-3x social-rm grow wow fadeInLeft" data-wow-delay="1.2s" data-toggle="modal" data-target="#ResumeModal" style="outline: 0px; text-decoration: initial; "></a>
+					<a href="#" title="Resume" data-toggle="tooltip" data-placement="bottom"><class="fa fa-file-text-o fa-3x social-rm grow wow fadeInLeft" data-wow-delay="1.2s" data-toggle="modal" data-target="#ResumeModal" style="outline: 0px; text-decoration: initial; "></a>
 					<!--Linkedin-->
 					<a href="https://www.linkedin.com/in/dylancobean" title="Linkedin" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-linkedin fa-3x social-fb grow wow fadeInDown" data-wow-delay="1.4s"></i></a>
 					<!--Github-->
@@ -204,7 +204,7 @@
 		                                GIS ANALYSIS
 		                            </div>
 		                            <div class="project-name">
-		                                Evaluation of Tucson's Public Transit vs Bicycle Infrastructure<br><br>(Personal Porject) 
+		                                Evaluation of Tucson's Public Transit vs Bicycle Infrastructure<br><br>(Personal Project) 
 		                            </div>
 		                        </div>
 		                    </div>
@@ -226,6 +226,7 @@
 		                </a>
 		            </div>
 		        </div>
+
 		        <!--Current Projects Sections-->
 		        <div role="tabpanel" class="tab-pane fade" id="currentprojects">
 		            <div class="container">
