fixed error with resume button

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<!--<h3>A Personal Webpage</h3>-->
 				<div class="text-center center-block site-header">
 					<!--Resume-->
-					<a href="#" title="Resume" data-toggle="tooltip" data-placement="bottom"><class="fa fa-file-text-o fa-3x social-rm grow wow fadeInLeft" data-wow-delay="1.2s" data-toggle="modal" data-target="#ResumeModal" style="outline: 0px; text-decoration: initial; "></a>
+					<a href="#" title="Resume" data-toggle="tooltip" data-placement="bottom"><div class="fa fa-file-text-o fa-3x social-rm grow wow fadeInLeft" data-wow-delay="1.2s" data-toggle="modal" data-target="#ResumeModal" style="outline: 0px; text-decoration: initial; "></div></a>
 					<!--Linkedin-->
 					<a href="https://www.linkedin.com/in/dylancobean" title="Linkedin" data-toggle="tooltip" data-placement="bottom"><i class="fa fa-linkedin fa-3x social-fb grow wow fadeInDown" data-wow-delay="1.4s"></i></a>
 					<!--Github-->
