minor tweaks - mobile css padding and margins

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			<div id="contactinfofooter" class="row">
 				<div class="col-xs-12 text-vertical-center center-block">                 
 					<div class="text-vertical-center wow fadeInUp" data-wow-delay="3s">
-                 		<a href="#aboutme" class="btn btn-lg btn-warning" role="button" style="padding-top:0px; padding-bottom:0px"><h5>Click to Learn More</h5></a>
+                 		<a href="#navigationtabs" class="btn btn-lg btn-warning" role="button" style="padding-top:0px; padding-bottom:0px"><h5>Click to Learn More</h5></a>
                     </div>
                     <!-- Circlur Arrow Button-->
 						<!--
@@ -110,7 +110,7 @@
     <!--<div id='mapidheader'>-->
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="col-xs-12">
+                <div id="navigationtabs" class="col-xs-12">
                     <!-- Nav tabs -->
                       <ul class="nav nav-tabs nav-justified nowrap" role="tablist">
                         <li class="active" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
