fixed spelling error

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                         <br><br>
                         <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven GIS analysis. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development, to final release for end-users. 
                         <br><br>
-                        <div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future carrier in GIS. 
+                        <div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
                         <br><br>                       
                         </h4></div>
 					
