ABOUT ME, WORKSAMPLE, RESUME - added resume, removed currrent projects

--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@
                       <ul class="nav nav-tabs nav-justified nowrap" role="tablist">
                         <li class="active" role="presentation"><a href="#aboutme" aria-controls="aboutme" role="tab" data-toggle="tab"><h1>ABOUT ME</h1></a></li>
                         <li role="presentation"><a href="#worksamples" aria-controls="worksamples" role="tab" data-toggle="tab"><h1>WORK SAMPLES</h1></a></li>
-                        <li role="presentation"><a href="#currentprojects" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>CURRENT PROJECTS</h1></a></li>
+                        <li role="presentation"><a href="#resumesection" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>RESUME</h1></a></li>
+                        <!--<li role="presentation"><a href="#currentprojects" aria-controls="currentprojects" role="tab" data-toggle="tab"><h1>CURRENT PROJECTS</h1></a></li>-->
                         <!--<li role="presentation"><a href="#blog" aria-controls="blog" role="tab" data-toggle="tab"><h1>BLOG</h1></a></li>-->
                       </ul>
                 </div>
@@ -136,20 +137,22 @@
                         <!--<div id="text1" class="col-sm-10 col-sm-offset-1">-->
                         <h4>
                         <div><span class="biggerfont">
+                        <div><span class="biggerfont">I am a </span>warehouse worker s
+                        <br><br>
                         I graduated with distiction </span> in Applied Mathematics & Environmental Hydrology from the University of Arizona in the Spring of 2013. 
                         <br><br>
                         <div><span class="biggerfont">I am a published technical writer </span>with the United States Geological Survery, and I have an upcoming authorship for my work in Forest Infrastructure with the World Resources Institute in Washington DC. 
                         <br><br>
-                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplimentary programs.
+                        <div><span class="biggerfont">I am a self-learner </span>in a wide array of technical applications - ArcGIS, ArcScene, City Engine, Spatial Analysis Toolsets, QGIS, HTML5, CSS, Javascript, jQuery, ModelBuilder, Mapbox.js, Leaflet.js, Database Management BMPs, Python, Microsoft Office Suite, along with several others supplementary programs.
                         <br><br>
-                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure, & environmental risk modeling.
+                        <div><span class="biggerfont">My ongoing subject matter expertise </span>focuses on sustainable-dev tech, water-use, city design, industrial composting, public transit infrastructure,  environmental risk modeling.
                         <br><br>  
-                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainablly-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
+                        <div><span class="biggerfont">I am passionate about </span>data-driven urban design and planning, along with current issues in urban analytics, smart-city design, public transit, sustainability-built infrastructure, water security, and overall what makes an urban center thrive and it's citizens prosper. 
                         <br><br>
                         <div><span class="biggerfont">What I can provide your team </span>are years of expertise in data-driven GIS analysis. I've worked on a range of research projects, working with small non-profits and large environmental organizations. I am well equipped to assist at any phase of project timelines - from initial proposals, throughout development, to final release for end-users. 
                         <br><br>
-                        <div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
-                        <br><br>                       
+                        <!--<div><span class="biggerfont">For the past year </span>I have worked as a warehouse laborer and weekend bartender, saving $20000 to pay off the student loans from my undergraduate education. I spent the majority of my free time teaching myself web-development to best prepare myself for cutting-edge application to a future career in GIS. 
+                        <br><br>-->                       
                         </h4></div>
 					
 			    			<!--<div class="aboutmefooter col-xs-10 col-sm-offset-1"><i>More than halfway through my degree program in Physics, I realized I was happier learning about the natural environment around me. I switched my major to Applied Mathematics & Environmental Hydrology and never looked back. I've had the great opportunity to work for both large environmental research institutions, along with small community-based environmental organizations. This diversity have given me a unique prespective on environmental sustainability and new urbanism. I've simultaniously created a strong foundation of skills in critical thinking, data visualization, and geospatial analysis. 
@@ -227,13 +230,31 @@
 		        </div>
 
 		        <!--Current Projects Sections-->
-		        <div role="tabpanel" class="tab-pane fade" id="currentprojects">
+		        <!--<div role="tabpanel" class="tab-pane fade" id="currentprojects">
 		            <div class="container">
 		                <div class="row">
 		                    <h1>Details on my current research efforts coming soon</h1>
 		                </div>
 		            </div>
+		        </div>-->
+
+		        <div role="tabpanel" class="tab-pane fade" id="resumesection">
+		            <div class="container">
+		                <div class="row">
+		                	<div class="text-vertical-center"> 
+
+
+						        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8cmJzNDhPZGRaY0E/preview" width="80%" height="700"></iframe>
+						     	<div>
+						        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
+						        <a type="button" href="pdf/Resume.pdf" class="btn btn-primary" download="DylanCobean_Resume.pdf">Download</a>
+						      </div>
+						      </div>
+						    </div>
+		                </div>
+		            </div>
 		        </div>
+
     		</div>
 		</div>
 	</div><!--End Container-fluid-->
@@ -280,7 +301,7 @@
 $(document).ready(function() {
 	/*enables all map behavior*/
 	mapboxgl.accessToken = 'pk.eyJ1IjoiZHlsYW5jIiwiYSI6Im53UGgtaVEifQ.RJiPqXwEtCLTLl-Vmd1GWQ';
-	var start = [-111.8, 32.7];
+	var start = [-111.8, 32.6];
 	var end = [-77.50, 38];
 	var mapvar = new mapboxgl.Map({
 	//attributionControl: false,
