added GIS Methods Sample to Writing Samples

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		                        <div class="portfolio-box-caption">
 		                            <div class="portfolio-box-caption-content">
 		                                <div class="project-category text-faded">
-		                                    GIS ANALYSIS
+		                                    GIS ANALYSIS<br><br>
 		                                </div>
 		                                <div class="project-name">
 		                                    Global Erosion Risk Map<br><br>(WRI Internship)
@@ -185,7 +185,7 @@
 		                    <div class="portfolio-box-caption">
 		                        <div class="portfolio-box-caption-content">
 		                            <div class="project-category text-faded">
-		                                TECHNICAL WRITING
+		                                TECHNICAL WRITING<br><br>
 		                            </div>
 		                            <div class="project-name">
 		                                Inventory & Evaluation of USGS Agricultural Water-Use Estimation Practices<br><br>
@@ -201,7 +201,7 @@
 		                    <div class="portfolio-box-caption">
 		                        <div class="portfolio-box-caption-content">
 		                            <div class="project-category text-faded">
-		                                GIS ANALYSIS
+		                                GIS ANALYSIS<br><br>
 		                            </div>
 		                            <div class="project-name">
 		                                Evaluation of Tucson's Public Transit vs Bicycle Infrastructure<br><br>(Personal Project) 
@@ -216,10 +216,25 @@
 		                    <div class="portfolio-box-caption">
 		                        <div class="portfolio-box-caption-content">
 		                            <div class="project-category text-faded">
-		                                GIS ANALYSIS
+		                                GIS ANALYSIS<br><br>
 		                            </div>
 		                            <div class="project-name">
 		                                Comparison of Various GIS Methodologies in Estimating Industrial Agricultural Water-Use<br><br>(University of Arizona Senior Capstone)
+		                            </div>
+		                        </div>
+		                    </div>
+		                </a>
+		            </div>
+		            <div class="col-lg-4 col-xs-6">
+		            <a href="#" class="portfolio-box" data-toggle="modal" data-target="#GISMethodModal">
+		                <img src="img/WRIMethodsSample4.png" class="img-responsive" alt="">
+		                    <div class="portfolio-box-caption">
+		                        <div class="portfolio-box-caption-content">
+		                            <div class="project-category text-faded">
+		                                METHODOLOGY WRITING/DESIGN<br><br>
+		                            </div>
+		                            <div class="project-name">
+		                                GIS methodology to globally map regions at high-risk of soil-erosion/land instability, and determination of where forest infrastructure can mitigate that risk<br><br>(WRI Internship)
 		                            </div>
 		                        </div>
 		                    </div>
@@ -289,6 +304,24 @@
 	      </div>
 	      <div class="modal-body">
 	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8a2hWdk1MMVB2cnc/preview" width="100%" height="550"></iframe>
+	      </div>
+	    </div>
+	    </div>
+	  </div>
+	</div>
+
+	<!-- WRI Methodology Writing Sample Modal -->
+	<div class="modal fade" id="GISMethodModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+	  <div class="modal-dialog modal-lg" role="document">
+	    <div class="modal-content">
+	     <div class="text-vertical-center"> 
+	      <div class="modal-header">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <!-- Don't need the download button for now, because there is a save button in the pdf viewer-->
+	        <a type="button" href="pdf/GISMethodSample.pdf" class="btn btn-primary" download="GISMethodSample_DylanCobean.pdf">Download</a>
+	      </div>
+	      <div class="modal-body">
+	        <iframe src="https://drive.google.com/file/d/0BxUFaFhM2TB8bDNqZlRTMlZDR28/preview" width="100%" height="800"></iframe>
 	      </div>
 	    </div>
 	    </div>
